--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <a href="#">HOME</a>
                   <a href="#">ABOUT US</a>
                   <a href="#">OUR SERVICES</a>
-                  <a href="">TOUR PACKAGE</a>
+                  <a href="#">TOUR PACKAGE</a>
                 </div>
               </div>
         </div>
