--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             <h1>Discover</h1>
             <h1>Greece</h1>
             <span>TRAVEL WITH UNIQUE EXPERIENCE</span>
+            <h4>TRAVEL WITH</h4>
+            <H4>UNIQUE EXPERIENCE</H4>
         </section>
         <section class="s-2">
             <div class=" container section2flex">
